# voik

./: .dockerignore  .gitignore  .travis.yml  .watch.yaml  Cargo.toml  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: clippy-fmt.yml
ci/: travis-benchmark.sh
commit_log/: .gitignore  Cargo.toml
commit_log/src/: lib.rs  position.rs  reader.rs  record.rs  segment.rs
commit_log/src/segment/: index.rs  log.rs  mod.rs
commit_log/tests/: consts.rs  integration_test.rs  utils.rs
docker/: Dockerfile.test  compose.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md
docs/architecture/: graph.mmd
src/: benchmark.rs  commit_log.rs  main.rs  voik.rs
src/commit_log/: mod.rs  segment.rs  test.rs
src/commit_log/segment/: index.rs  log.rs
