[package]
name = "commit_log"
version = "0.1.0"
authors = ["Marcelo Boeira <me@marceloboeira.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"

[dev-dependencies]
tempfile = "3"

[features]
test-prelude = []
